# pendulumRNN

./: .gitignore  README.md  TSCMassScript.sh  TSCscript.sh  TSCscriptHohmann.sh  TSSCscript.sh  cr3bpRMSELSTM.csv  cr3bpRMSEMamba.csv  cr3bpTest.csv  cr3bpTime.csv  data.yaml  generateGMATSpacecraftThrusts.sh  generateGMATThrustDatasets.sh  generateJournalThrustClass.sh  generateJournalThrustClass_high.sh  generateJournalThrustClass_old.sh  generateLEO-VLEOTest.sh  generateREAL-VLEOTest.sh  main.py  main2024.py  main2024TL.py  main2024TL_4d.py  main2024TL_4d_0.2_0.8_trueAnom.py  main2024TL_4d_pert_0.2.py  main2024TL_4d_pert_0.2_mamba.py  main2024TL_4d_pert_0.8.py  main2024_4d_0.2_0.8_trueAnom_mamba.py  main2024_4d_0.8_linearized_mamba.py  main2024_4d_0.8_linearized_mamba_small_def.py  main2024_4d_0.8_mamba_unsup.py  main2024_4d_pert_0.8_mamba.py  main2024_4d_pert_0.8_mamba_DDDAS.py  main2024_4d_pert_0.8_mamba_ascend.py  main2024_4d_pert_0.8_mamba_testingEvalSpeed.py  main2024diffLSTM.py  main2024errors.py  mainAttention.py  mainUnsupervisedCR3BPchopped.py  mainUnsupervisedCR3BPchoppedNew.py  mamba.py  (+59 more)
data/journalPaper/: cr3bpRMSELSTM.csv  cr3bpRMSEMamba.csv  cr3bpRMSPELSTM.csv  cr3bpRMSPEMamba.csv  cr3bpSW.csv  cr3bpShortRMSPELSTM.csv  cr3bpShortRMSPEMamba.csv  cr3bpShortSW.csv  cr3bpShortTime.csv  cr3bpShortTime_desktop.csv  cr3bpTime_desktop.csv  p2bpRMSEMamba.csv  p2bpRMSPELSTM.csv  p2bpRMSPEMamba.csv  p2bpSW.csv  p2bpShortRMSELSTM.csv  p2bpShortRMSEMamba.csv  p2bpShortRMSPELSTM.csv  p2bpShortRMSPEMamba.csv  p2bpShortSW.csv  p2bpShortTime.csv  p2bpShortTime_desktop.csv  p2bpTime.csv  p2bpTime_desktop.csv
data/superweightHowNonlinear/: superWeight300Samples.csv  superWeightCR3BP4dSamples.csv  superWeightCR3BPSP4dSamples.csv
gmat/data/: report5050Prop.txt  report5050PropBackLSTM.txt  report5050PropBackMamba.txt  reportEquinox.txt  reportKeplarianHEO360.txt  reportKeplerian.txt  reportLEO5050Prop.txt  reportLEO5050PropBackLSTM.txt  reportLEO5050PropBackMamba.txt
gmat/scripts/: ExBasicEarthProp.py  HEO360Prop.script  HEO360Prop.script.bak  LEO5050Prop.script  LEO5050Prop.script.bak  generateSpacecraftEThrusts.py  generateSpacecraftImpBurnDirty.py  generateSpacecraftThrustOpt.py  generateSpacecraftThrusts.py  testProcessDatasets.py  testProcessDatasetsOE.py
matlab numerical solution/: pendulumODE.m
matlab solution/: main.m
matlab/1dPDF/: asym_1D_pdf_approx_coeffs.mat  asym_1D_pdf_approx_coeffs_400.mat  asym_1D_pdf_approx_coeffs_400_pred.mat  asym_1D_pdf_approx_coeffs_pred.mat  asym_1D_pdf_approx_coeffs_pred_400.mat  asym_steeper1D_pdf_cdf_400_pred.mat  asym_steeper1D_pdf_coeffs_400.mat  asym_steeper1D_pdf_coeffs_400_pred.mat  asym_steeper1D_pdf_cumInteg_400.mat  calcResiduals.m
matlab/cislunar/: CR3BP.m  CR3BP.prj  CR3BPODE.m  CR3BP_butterfly_1080.mat  mainODE.m  mainODE.prj  ode89cr3bp.m  ode89cr3bp.prj
matlab/cislunar/codegen/lib/CR3BP/: CMakeLists.txt  CR3BP.c  CR3BP.h  CR3BP_data.c  CR3BP_data.h  CR3BP_initialize.c  CR3BP_initialize.h  CR3BP_rtw.mk  CR3BP_terminate.c  CR3BP_terminate.h  CR3BP_types.h  CoderTimeAPI.c  CoderTimeAPI.h  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  gcGuiReport.mat  rtw_proj.tmw  rtwtypes.h  tic.c  tic.h  timeKeeper.c  timeKeeper.h  toc.c  toc.h
matlab/cislunar/codegen/lib/CR3BP/examples/: main.c  main.h
matlab/cislunar/codegen/lib/CR3BP/html/: report.mldatx
matlab/cislunar/codegen/lib/CR3BP/interface/: _coder_CR3BP_api.c  _coder_CR3BP_api.h  _coder_CR3BP_info.c  _coder_CR3BP_info.h  _coder_CR3BP_mex.c  _coder_CR3BP_mex.h
matlab/howNonlinear/: angleParameters.m
matlab/lowerDataMamba/: current_coeff.mat  current_pdf.mat  mamba_rbf_test.m  mamba_rbf_test.mat  mamba_rbf_test_plotting.m  matrix_t0.mat  matrix_t1.mat  matrix_tf.mat  normalized_coeff.mat  (+1 more)
old/: runGMATEnergyTest.sh  runGMATRMSETest.sh
predict/: animatePredictions.py  convert2vid.py
python numerical solution/: main.py
scripts/: profilingMain.py
slurm/: massClass-VLEO.slurm  massClass-damping.slurm  massClass-full.slurm  massClass-mass.slurm  massClass-test.slurm  orbitMassClass.slurm  orbitMassGen.slurm  slurm-massClass.slurm
test/: gpt.py  mainUnsupervisedCR3BPchoppedOld.py  testAnomSpacing.py  testCR3BPICs.py  testColorMap.py  testCustomOde45.py  testGMATImport.py  testODESolver.py  testODESolver_desolver.py  testOE.py  test_OE_prop.py
time_sequence_prediction/: train.py
(+847 files in other folders)
